updated composer to new repo and package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "terskine/jira-rest",
-    "description": "jira-rest client",
+    "name": "magento/MFTF-Zephyr-Integeration",
+    "description": "MFTF Zephyr Integration",
     "type": "library"
 }
