--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,15 @@
 {
     "name": "magento/mftf-zephyr-integration",
     "description": "MFTF Zephyr Integration",
-    "type": "library"
+    "type": "library",
+    "require": {
+        "php": "7.0.2|7.0.4|~7.0.6|~7.1.0|~7.2.0",
+        "lesstif/php-jira-rest-client": "^1.19",
+        "monolog/monolog": "^1.17"
+    },
+    "autoload": {
+        "psr-4": {
+            "Magento\\JZI\\": "src/Magento/JZI"
+        }
+    }
 }
