Fixed project namespace and autoloading issues

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Magento\\JZI\\": "src/Magento/JZI"
+            "Magento\\MZI\\": "src/Magento/MZI"
         }
     }
 }
