--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "require": {
         "php": "7.0.2|7.0.4|~7.0.6|~7.1.0|~7.2.0",
         "lesstif/php-jira-rest-client": "^1.19",
-        "monolog/monolog": "^1.17"
+        "monolog/monolog": "^1.17",
+        "vlucas/phpdotenv": "~1.0|~2.0"
     },
     "autoload": {
         "psr-4": {
